--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -36,12 +36,12 @@ const isRtl = dir === 'rtl';
 
 <div class="page-footer">
 	<div class="footer-links">
-		<span>©️ Louis Escher</span>
+		<span>©️ Broslunas | Todos los derechos reservados</span>
 		<span>—</span>
-		<a href="https://louisescher.dev/">Homepage</a>
+		<a href="https://broslunas.vercel.app/">Inicio</a>
 	</div>
 	<div class="social-footer-icons">
-		<a href="https://github.com/comet-analytics/ion-theme" aria-label="GitHub Icon"><Icon name="github" size='1.25rem' /></a>
+		<a target="_blank" href="https://github.com/Broslunas" aria-label="GitHub Icon"><Icon name="github" size='1.25rem' /></a>
 	</div>
 </div>
 
