--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -38,7 +38,7 @@ const isRtl = dir === 'rtl';
 	<div class="footer-links">
 		<span>©️ Broslunas | Todos los derechos reservados</span>
 		<span>—</span>
-		<a href="https://broslunas.vercel.app/">Inicio</a>
+		<a href="https://broslunas.com/">Inicio</a>
 	</div>
 	<div class="social-footer-icons">
 		<a target="_blank" href="https://github.com/Broslunas" aria-label="GitHub Icon"><Icon name="github" size='1.25rem' /></a>
