--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -3,3 +3,9 @@
   padding-bottom: 1rem !important;
   margin-top: 0;
 }
+
+
+.container {
+  box-shadow: 0 0 50px rgb(255, 255, 255);
+  border-radius: 25px
+}
