--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,35 +1,31 @@
-/* Specify colors. NOTE: YOU CAN CUSTOMIZE THESE HOWEVER YOU WANT! */
+/* Dark mode colors. */
 :root {
-  /* Font */
-  --sl-font: 'Space Grotesk', sans-serif;
-  --sl-font-system-mono: "Space Mono", monospace;
-
-  /* Dark mode colors */
-	--sl-color-accent-low: #3c0017;
-	--sl-color-accent: #bd0249;
-	--sl-color-accent-high: #ff78ac;
+	--sl-color-accent-low: #302100;
+	--sl-color-accent: #866300;
+	--sl-color-accent-high: #d9c6a2;
 	--sl-color-white: #ffffff;
-	--sl-color-gray-1: #c2c2c2;
-	--sl-color-gray-2: #a3a3a3;
-	--sl-color-gray-3: #838383;
-	--sl-color-gray-4: #3f3f3f;
-	--sl-color-gray-5: #262626;
-	--sl-color-gray-6: #121212;
-	--sl-color-black: #070707;
-
-	--sl-color-red-low: #3c0017;
-  --sl-color-red: #bd0249;
-	--sl-color-red-high: #ff78ac;
-
-  --sl-color-purple-low: #33225b;
-  --sl-color-purple: #8a5cf5;
-  --sl-color-purple: #9975ee;
-  
-  --sl-border: #262626;
-  --pagefind-ui-border: #262626;
-  --pagefind-ui-primary: var(--sl-color-accent);
-
-  --sl-icon-size: 1.25rem;
+	--sl-color-gray-1: #ededf2;
+	--sl-color-gray-2: #c1c1c7;
+	--sl-color-gray-3: #8a8a95;
+	--sl-color-gray-4: #575761;
+	--sl-color-gray-5: #373740;
+	--sl-color-gray-6: #26262e;
+	--sl-color-black: #18181c;
+}
+/* Light mode colors. */
+:root[data-theme='light'] {
+	--sl-color-accent-low: #e3d5ba;
+	--sl-color-accent: #896500;
+	--sl-color-accent-high: #422f00;
+	--sl-color-white: #18181c;
+	--sl-color-gray-1: #26262e;
+	--sl-color-gray-2: #373740;
+	--sl-color-gray-3: #575761;
+	--sl-color-gray-4: #8a8a95;
+	--sl-color-gray-5: #c1c1c7;
+	--sl-color-gray-6: #ededf2;
+	--sl-color-gray-7: #f6f6f8;
+	--sl-color-black: #ffffff;
 }
 
 /* Change background color of sidebar & add border */
